--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-query": "^3.39.2",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-sticky": "^6.0.3",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
